<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Safety-Alarm</string>
    <string name="hello_world">git is cool!</string>
    <string name="menu_settings">Settings</string>
    <string name="new_appointment">New appointment</string>
    <string name="change_state">Change State</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_new_appointment">NewAppointmentActivity</string>
	<string name="SSID_hint">Wifi Name/SSID</string>
	<string name="phone_input_hint">Phone number</string>
	<string name="setDate">Select date</string>
	<string name="setTime">Select time</string>
	<string name="MSG_CODEWORD">XYZPDDAFP</string>
</resources>