<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAppointmentActivity" >

    <Button
        android:id="@+id/change_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/change_state"
        android:onClick="changeState" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/confirm"
        android:onClick="confirmAppointment" />

    <EditText
        android:id="@+id/recipient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/confirm"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/phone_input_hint"
        android:inputType="phone" >

        
    </EditText>

    <EditText
        android:id="@+id/home_SSID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/recipient"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/SSID_hint" />

    <Button
        android:id="@+id/set_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/set_time"
        android:layout_below="@+id/set_time"
        android:layout_marginTop="28dp"
        android:text="@string/setDate"
        android:onClick="setDate" />

    <TextView
        android:id="@+id/dateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/set_date"
        android:layout_alignBottom="@+id/set_date"
        android:layout_alignLeft="@+id/confirm"
    />

    <TextView
        android:id="@+id/timeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/set_time"
        android:layout_alignBottom="@+id/set_time"
        android:layout_alignLeft="@+id/dateView"
         />

    <Button
        android:id="@+id/set_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/change_state"
        android:layout_below="@+id/change_state"
        android:layout_marginTop="43dp"
        android:text="@string/setTime"
        android:onClick="setTime" />

</RelativeLayout>